Ep26, adding HTML from Strings and XSS

--- a/exercises/20 - The DOM/index.html
+++ b/exercises/20 - The DOM/index.html
@@ -12,7 +12,6 @@
 <body>
   <img class="nice cool" src="https://source.unsplash.com/random/600x300" />
 
-
   <div class="items">
     <div class="item">
       <img class="custom" data-first="bos" data-name="wes" src="https://source.unsplash.com/random/300x300" />
@@ -66,7 +65,7 @@
         }
       </style>
 
-      <script src="./creating.js"></script>
+      <script src="./creating-with-strings.js"></script>
 
 </body>
 
